--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -31,10 +31,10 @@ a:hover {
   text-decoration: underline;
 }
 
-img {
-  max-width: 100%;
-  display: block;
-}
+//img {
+//  max-width: 100%;
+//  display: block;
+//}
 
 .heading2Xl {
   font-size: 2.5rem;
